--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -181,19 +181,20 @@ img {
         transform: rotate(15deg);
     }
 
-
-    
-
 /* Show menu */
 .show-menu{
   top: 0;
 }
 
 /* Change background header */
-
+.bg-header{
+  background-color: var(--body-color);
+}
 
 /* Active link */
-
+.active-link{
+  color: var(--first-color);
+}
 
 /*=============== HOME ===============*/
 .home{
@@ -259,9 +260,6 @@ img {
   
 }
 
-
-
-
 /*=============== ABOUT ===============*/
 
 .about__container{
@@ -291,10 +289,12 @@ img {
 .about__snow-1{
   top: 12rem;
   left: 1.5rem;
+  animation: var(--animate-snow-1);
 }
 .about__snow-2{
   right: -.75rem;
   bottom: .5rem;
+  animation: var(--animate-snow-2);
 }
 /*=============== BUTTON ===============*/
 .button{
@@ -313,22 +313,195 @@ img {
 }
 
 /*=============== SEND ===============*/
+.send__container{
+  position: relative;
+  grid-template-columns: 200px;
+  justify-content: center;
+  row-gap: 3rem;
+  padding-top: 1.5rem;
+}
 
+.send__card{
+  text-align: center;
+}
 
+.send__card{
+  width: 180px;
+  margin-bottom: .75rem;
+}
+
+.send__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: .5rem;
+}
+
+.send__description{
+  font-size: var(--small-font-size);
+  padding-inline: .5rem;
+}
+.send__snow-1,
+.send__snow-2,
+.send__snow-3{
+  width: 50px;
+  position: absolute;
+}
+
+.send__snow-1{
+  left: 0;
+  top: 7rem;
+  animation: var(--animate-snow-1);
+}
+
+.send__snow-2{
+  right: 0;
+  top: 23rem;
+  animation: var(--animate-snow-2);
+}
+.send__snow-3{
+  bottom: 9rem;
+  left: 0;
+  animation: var(--animate-snow-1);
+}
 /*=============== CELEBRATE ===============*/
+.celebrate__container{
+  position: relative;
+  row-gap: 3.5rem;
+}
+
+.celebrate__data{
+  text-align: center;
+}
+
+.celebrate__description{
+  margin-bottom: 2rem;
+}
+
+.celebrate__img{
+  width: 320px;
+  justify-self: center;
+}
+
+.celebrate__snow-1,
+.celebrate__snow-2{
+  width: 50px;
+  position: absolute;
+}
+
+.celebrate__snow-1{
+  top: 1.5rem;
+  left: 1.5rem;
+  animation: var(--animate-snow-1)
+}
+
+.celebrate__snow-2{
+  top: 18rem;
+  right: 0;
+  animation: var(--animate-snow-2);
+}
 
 
 /*=============== FOOTER ===============*/
+.footer{
+  overflow: hidden;
+}
 
+.footer__container{
+  position: relative;
+  padding-block: 4.5rem 2rem;
+  text-align: center;
+}
 
+.footer__logo,
+.footer__social-link,
+.footer__copy{
+  color: var(--white-color);
+}
+
+.footer__logo{
+  display: inline;
+  font-size: var(--h2-font-size);
+  font-family: var(--second-font);
+  margin-bottom: 1rem;
+}
+
+.footer__social{
+  display: flex;
+  justify-content: center;
+  column-gap: 1.5rem;
+}
+
+.footer__social-link{
+  font-size: 1.25rem;
+  transition: color .3s;
+}
+
+.footer__social-link:hover{
+  color: var(--first-color);
+}
+
+.footer__copy{
+  display: block;
+  margin-top: 2rem;
+  font-size: var(--smaller-font-size);
+}
+
+.footer__snow-1,
+.footer__snow-2{
+  position: absolute;
+}
+
+.footer__snow-1{
+  width: 50px;
+  top: 4.5rem;
+  left: 0;
+  animation: var(--animate-snow-1);
+}
+.footer__snow-2{
+  width: 70px;
+  top: 6.5rem;
+  right: -2rem;
+  animation: var(--animate-snow-2);
+}
 /*=============== SCROLL BAR ===============*/
 
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(210, 8%, 15%);
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: hsl(210, 8%, 25%);
+  border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(210, 8%, 35%);
+}
 
 /*=============== SCROLL UP ===============*/
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--white-color);
+  display: inline;
+  padding: .45rem;
+  border-radius: .45rem;
+  font-size: 1rem;
+  color: var(--body-color);
+  z-index: var(--z-tooltip);
+  transition: bottom .3s, transform .3s;
+}
 
+.scrollup:hover{
+  transform: translateY(-.25rem);
+}
 
 /* Show Scroll Up */
-
+.show-scroll{
+  bottom: 3rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For medium devices */
