--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -659,5 +659,80 @@ img {
   .footer__social-link{
     font-size: 1.5rem;
   }
+
+  .footer__snow-1{
+    top: 8.5rem;
+    left: 10rem;
+  }
+  .footer__snow-2{
+    top: 8.5rem;
+    right: 4rem;
+  }
+
+  .footer__copy{
+    margin-top: 4rem;
+  }
+
+  .scrollup{
+    right: 3rem;
+  }
+}
+
+@media (width >= 1064px){
+  .container{
+    margin-inline: auto;
+  }
+}
+
+
+@media (width >= 1200px){
+  .home{
+    height: 980px;
+  }
+
+  .home__title{
+    font-size: var(--biggest-font-size);
+  }
+
+  .home__moutain-1,
+  .home__moutain-2,
+  .home__moutain-3,
+  .home__snow{
+    width: 100%;
+  }
+
+  .home__village{
+    width: 750px;
+    bottom: 4rem;
+    }
+
+    .home__pine{
+      width: 720px;
+      bottom: 12.5rem;
+    }
+
+    .home__moutain-1,
+    .home__moutain-2{
+      bottom: -5rem;
+    }
+
+    .home__moon{
+      width: 600px;
+      bottom: 14rem;
+    }
+
+    .home__trineo{
+      width: 500px;
+      bottom: 28rem;
+    }
 }
 /* For 2K+ resolutions */
+
+@media (width >= 1700px){
+  .home{
+    max-width: 1280px;
+    height: 990px;
+    margin-inline: auto;
+
+  }
+}
